[MediaPlayerSettings] Make strings start with uppercase letter
All existing translations are updated and converted to uppercase.

--- a/po/ar.po
+++ b/po/ar.po
@@ -12107,7 +12107,7 @@ msgstr "حذف هذه العلامة"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "إعادة قائمة الاغانى"
 
 #
@@ -12144,10 +12144,10 @@ msgstr ""
 msgid "running"
 msgstr ""
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "حفظ الدليل عند خروج"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "حفظ قائمة العرض عند خروج"
 
 #
@@ -12200,7 +12200,7 @@ msgstr "إظهار البدائل"
 msgid "show event details"
 msgstr "إظهار تفاصيل الحدث"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -12279,7 +12279,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -12300,7 +12300,7 @@ msgstr "قياسى"
 msgid "start cut here"
 msgstr "أبدأ القطع هنا"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "دليل البداية"
 
 msgid "starts in a few seconds"
