--- a/po/ca.po
+++ b/po/ca.po
@@ -12732,7 +12732,7 @@ msgid "rename entry"
 msgstr ""
 
 #
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr ""
 
 #
@@ -12772,11 +12772,11 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr ""
 
 #
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr ""
 
 #
@@ -12834,7 +12834,7 @@ msgstr "mostrar alternatives"
 msgid "show event details"
 msgstr "mostrar detalls del programa"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -12918,7 +12918,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -12942,7 +12942,7 @@ msgid "start cut here"
 msgstr "començar tall aquí"
 
 #
-msgid "start directory"
+msgid "Start directory"
 msgstr ""
 
 msgid "starts in a few seconds"
