--- a/po/cs.po
+++ b/po/cs.po
@@ -12964,7 +12964,7 @@ msgid "rename entry"
 msgstr "Přejmenovat"
 
 #
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Opakovat playlist"
 
 #
@@ -13005,11 +13005,11 @@ msgid "running"
 msgstr "probíhá"
 
 #
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Uložit poslední adresář při ukončení"
 
 #
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Při ukončení uložit playlist"
 
 #
@@ -13068,7 +13068,7 @@ msgid "show event details"
 msgstr "Zobrazit podrobnosti"
 
 #
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Zobrazovat Mediaplayer v hlavním menu"
 
 msgid "show softwaremanager in setup menu"
@@ -13154,7 +13154,7 @@ msgid "social/spiritual science"
 msgstr "sociální/duchovní vědy"
 
 #
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Třídění playlistů"
 
 msgid "special events"
@@ -13178,7 +13178,7 @@ msgid "start cut here"
 msgstr "začátek střihu zde"
 
 #
-msgid "start directory"
+msgid "Start directory"
 msgstr "Výchozí adresář"
 
 #
