--- a/po/da.po
+++ b/po/da.po
@@ -12920,8 +12920,8 @@ msgid "rename entry"
 msgstr "omdøb punkt"
 
 #
-msgid "repeat playlist"
-msgstr "gentag afspilningsliste"
+msgid "Repeat playlist"
+msgstr "Gentag afspilningsliste"
 
 #
 msgid "repeated"
@@ -12961,12 +12961,12 @@ msgid "running"
 msgstr "Advarsel"
 
 #
-msgid "save last directory on exit"
-msgstr "gem seneste mappe ved afbrydelse"
+msgid "Save last directory on exit"
+msgstr "Gem seneste mappe ved afbrydelse"
 
 #
-msgid "save playlist on exit"
-msgstr "gem afspilningsliste ved afbrydelse"
+msgid "Save playlist on exit"
+msgstr "Gem afspilningsliste ved afbrydelse"
 
 #
 msgid "scan state"
@@ -13022,8 +13022,8 @@ msgstr "Vis alternativer"
 msgid "show event details"
 msgstr "vis program detaljer"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "vis mediaplayer på hovedmenu"
+msgid "Show media player on main menu"
+msgstr "Vis mediaplayer på hovedmenu"
 
 msgid "show softwaremanager in setup menu"
 msgstr "vis softwaremanager i setup menuen"
@@ -13106,8 +13106,8 @@ msgstr "social/politiske emner/økonomi"
 msgid "social/spiritual science"
 msgstr "social/spirituel science"
 
-msgid "sorting of playlists"
-msgstr "sortering af spilleliste"
+msgid "Sorting of playlists"
+msgstr "Sortering af spilleliste"
 
 msgid "special events"
 msgstr "special begivenheder"
@@ -13130,8 +13130,8 @@ msgid "start cut here"
 msgstr "start klip her"
 
 #
-msgid "start directory"
-msgstr "start mappe"
+msgid "Start directory"
+msgstr "Start mappe"
 
 #, fuzzy
 msgid "starts in a few seconds"
