--- a/po/de.po
+++ b/po/de.po
@@ -11315,7 +11315,7 @@ msgstr "Diese Markierung entfernen"
 msgid "rename entry"
 msgstr "Eintrag umbenennen"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Wiederholung der Wiedergabeliste"
 
 msgid "repeated"
@@ -11351,10 +11351,10 @@ msgstr "Romanze"
 msgid "running"
 msgstr "Laufen"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Anfangsverzeichnis beim Beenden merken"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Wiedergabeliste beim Beenden speichern"
 
 msgid "scan state"
@@ -11402,7 +11402,7 @@ msgstr "Alternativen anzeigen"
 msgid "show event details"
 msgstr "Sendungs-Details anzeigen"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Mediaplayer im Hauptmenü anzeigen"
 
 msgid "show softwaremanager in setup menu"
@@ -11481,7 +11481,7 @@ msgstr "Soziale/Politische Angelegenheiten/Wirtschaft (Allgemein)"
 msgid "social/spiritual science"
 msgstr "Sozial/Geisteswissenschaft"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Sortierung der Wiedergabeliste"
 
 msgid "special events"
@@ -11502,7 +11502,7 @@ msgstr "Standard"
 msgid "start cut here"
 msgstr "Schnitt hier starten"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Anfangsverzeichnis"
 
 msgid "starts in a few seconds"
