--- a/po/en.po
+++ b/po/en.po
@@ -11407,8 +11407,8 @@ msgstr "remove this mark"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
-msgstr "repeat playlist"
+msgid "Repeat playlist"
+msgstr "Repeat playlist"
 
 msgid "repeated"
 msgstr "repeated"
@@ -11444,11 +11444,11 @@ msgstr "romance"
 msgid "running"
 msgstr "gardening"
 
-msgid "save last directory on exit"
-msgstr "save last directory on exit"
+msgid "Save last directory on exit"
+msgstr "Save last directory on exit"
 
-msgid "save playlist on exit"
-msgstr "save playlist on exit"
+msgid "Save playlist on exit"
+msgstr "Save playlist on exit"
 
 msgid "scan state"
 msgstr "scan state"
@@ -11496,8 +11496,8 @@ msgstr "show alternatives"
 msgid "show event details"
 msgstr "show event details"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
+msgstr "Show media player on main menu"
 
 msgid "show softwaremanager in setup menu"
 msgstr "show softwaremanager in setup menu"
@@ -11575,8 +11575,8 @@ msgstr "social/political issues/economics (general)"
 msgid "social/spiritual science"
 msgstr "social/spiritual science"
 
-msgid "sorting of playlists"
-msgstr "sorting of playlists"
+msgid "Sorting of playlists"
+msgstr "Sorting of playlists"
 
 msgid "special events"
 msgstr "special events"
@@ -11596,8 +11596,8 @@ msgstr "standard"
 msgid "start cut here"
 msgstr "start cut here"
 
-msgid "start directory"
-msgstr "start directory"
+msgid "Start directory"
+msgstr "Start directory"
 
 #, fuzzy
 msgid "starts in a few seconds"
