--- a/po/es.po
+++ b/po/es.po
@@ -12629,8 +12629,8 @@ msgid "rename entry"
 msgstr "Renombrar entrada"
 
 #
-msgid "repeat playlist"
-msgstr "repetir liste de reproducción"
+msgid "Repeat playlist"
+msgstr "Repetir liste de reproducción"
 
 #
 msgid "repeated"
@@ -12669,12 +12669,12 @@ msgid "running"
 msgstr "corriendo"
 
 #
-msgid "save last directory on exit"
-msgstr "guardar el último directorio al salir"
+msgid "Save last directory on exit"
+msgstr "Guardar el último directorio al salir"
 
 #
-msgid "save playlist on exit"
-msgstr "guardar la lista al salir"
+msgid "Save playlist on exit"
+msgstr "Guardar la lista al salir"
 
 #
 msgid "scan state"
@@ -12729,7 +12729,7 @@ msgstr "mostrar alternativas"
 msgid "show event details"
 msgstr "mostrar detalles del evento"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Mostrar mediaplayer en mainmenu"
 
 msgid "show softwaremanager in setup menu"
@@ -12813,7 +12813,7 @@ msgstr "Cuestiones sociales / políticas / economía (general)"
 msgid "social/spiritual science"
 msgstr "Ciencia social / espiritual"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Clasificación de listas de reproducción"
 
 msgid "special events"
@@ -12837,8 +12837,8 @@ msgid "start cut here"
 msgstr "comenzar corte aquí"
 
 #
-msgid "start directory"
-msgstr "directorio de inicio"
+msgid "Start directory"
+msgstr "Directorio de inicio"
 
 msgid "starts in a few seconds"
 msgstr "comienza en unos segundos"
