--- a/po/et.po
+++ b/po/et.po
@@ -11374,7 +11374,7 @@ msgstr "eemalda see märk"
 msgid "rename entry"
 msgstr "nimeta nimekiri ümber"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "korda esitusloendit"
 
 msgid "repeated"
@@ -11410,11 +11410,11 @@ msgstr "romantika"
 msgid "running"
 msgstr "töötab"
 
-msgid "save last directory on exit"
-msgstr "pea väljumisel asukoht meeles"
+msgid "Save last directory on exit"
+msgstr "Pea väljumisel asukoht meeles"
 
-msgid "save playlist on exit"
-msgstr "salvesta esitusloend"
+msgid "Save playlist on exit"
+msgstr "Salvesta esitusloend"
 
 msgid "scan state"
 msgstr "otsingu seis"
@@ -11461,8 +11461,8 @@ msgstr "näita asenduskanaleid"
 msgid "show event details"
 msgstr "näita saatetutvustust"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "näita meediaesitajat peamenüüs"
+msgid "Show media player on main menu"
+msgstr "Näita meediaesitajat peamenüüs"
 
 msgid "show softwaremanager in setup menu"
 msgstr "näita tarkvarahaldurit seadistusmenüüs"
@@ -11540,8 +11540,8 @@ msgstr "ühiskondlikud/poliitilised asjad/majandus (üldiselt)"
 msgid "social/spiritual science"
 msgstr "ühiskonna/hingeteadus"
 
-msgid "sorting of playlists"
-msgstr "esitusloendite järjestamine."
+msgid "Sorting of playlists"
+msgstr "Esitusloendite järjestamine"
 
 msgid "special events"
 msgstr "erisündmused"
@@ -11561,8 +11561,8 @@ msgstr "tavaline"
 msgid "start cut here"
 msgstr "alusta lõiget siit"
 
-msgid "start directory"
-msgstr "juurkaust"
+msgid "Start directory"
+msgstr "Juurkaust"
 
 msgid "starts in a few seconds"
 msgstr "algab mõne sekudi jooksul"
