--- a/po/fa.po
+++ b/po/fa.po
@@ -11494,7 +11494,7 @@ msgstr ""
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr ""
 
 msgid "repeated"
@@ -11530,10 +11530,10 @@ msgstr "رمانتیک"
 msgid "running"
 msgstr "در حال اجرا"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr ""
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr ""
 
 msgid "scan state"
@@ -11581,7 +11581,7 @@ msgstr ""
 msgid "show event details"
 msgstr ""
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -11660,7 +11660,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -11681,7 +11681,7 @@ msgstr "استاندارد"
 msgid "start cut here"
 msgstr ""
 
-msgid "start directory"
+msgid "Start directory"
 msgstr ""
 
 msgid "starts in a few seconds"
