--- a/po/fr.po
+++ b/po/fr.po
@@ -11296,7 +11296,7 @@ msgstr "Supprimer ce marqueur"
 msgid "rename entry"
 msgstr "Renommer l'entrée"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Répéter liste lecture"
 
 msgid "repeated"
@@ -11332,10 +11332,10 @@ msgstr "Romance"
 msgid "running"
 msgstr "En cours d'éxécution"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Sauver dernier répertoire en sortant"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Sauver liste lecture en sortant"
 
 msgid "scan state"
@@ -11383,7 +11383,7 @@ msgstr "Afficher alternatifs"
 msgid "show event details"
 msgstr "Afficher détails événement"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Afficher le lecteur multimédia dans le menu principal"
 
 msgid "show softwaremanager in setup menu"
@@ -11462,7 +11462,7 @@ msgstr "Questions sociales/Politiques/Economie (général)"
 msgid "social/spiritual science"
 msgstr "Science sociale/Spirituelle"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Tri des listes de lecture"
 
 msgid "special events"
@@ -11483,7 +11483,7 @@ msgstr "Standard"
 msgid "start cut here"
 msgstr "Départ de coupe ici"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Répertoire départ"
 
 msgid "starts in a few seconds"
