--- a/po/fy.po
+++ b/po/fy.po
@@ -12985,7 +12985,7 @@ msgid "rename entry"
 msgstr ""
 
 #
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "ôfspyllyst opnei spylje"
 
 #
@@ -13025,11 +13025,11 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Lêste map opslaan by ôfsluten"
 
 #
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Ofspiellyst opslaan by ôfsluten"
 
 #
@@ -13087,7 +13087,7 @@ msgstr "alternatieven sjen litte"
 msgid "show event details"
 msgstr "EPG details sjen litte"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -13171,7 +13171,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -13195,8 +13195,8 @@ msgid "start cut here"
 msgstr "start stik hjirre"
 
 #
-msgid "start directory"
-msgstr "start map"
+msgid "Start directory"
+msgstr "Start map"
 
 msgid "starts in a few seconds"
 msgstr ""
