--- a/po/he.po
+++ b/po/he.po
@@ -12242,8 +12242,8 @@ msgstr "remove this mark"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
-msgstr "repeat playlist"
+msgid "Repeat playlist"
+msgstr "Repeat playlist"
 
 #
 msgid "repeated"
@@ -12279,11 +12279,11 @@ msgstr ""
 msgid "running"
 msgstr ""
 
-msgid "save last directory on exit"
-msgstr "save last directory on exit"
+msgid "Save last directory on exit"
+msgstr "Save last directory on exit"
 
-msgid "save playlist on exit"
-msgstr "save playlist on exit"
+msgid "Save playlist on exit"
+msgstr "Save playlist on exit"
 
 #
 msgid "scan state"
@@ -12336,7 +12336,7 @@ msgstr "הראה אלטרנטיבות"
 msgid "show event details"
 msgstr "הצג מידע על האירוע"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -12415,7 +12415,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -12436,7 +12436,7 @@ msgstr "סטנדרטי"
 msgid "start cut here"
 msgstr "התחל גזירה כאן"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "התחל תיקיה"
 
 msgid "starts in a few seconds"
