--- a/po/hu.po
+++ b/po/hu.po
@@ -11287,8 +11287,8 @@ msgstr "e jelzö eltávolítása"
 msgid "rename entry"
 msgstr "átnevezés"
 
-msgid "repeat playlist"
-msgstr "lejátszási lista ismétlése"
+msgid "Repeat playlist"
+msgstr "Lejátszási lista ismétlése"
 
 msgid "repeated"
 msgstr "többszöri"
@@ -11323,11 +11323,11 @@ msgstr "románc"
 msgid "running"
 msgstr "futó"
 
-msgid "save last directory on exit"
-msgstr "az utolsó mappa mentése kilépéskor"
+msgid "Save last directory on exit"
+msgstr "Az utolsó mappa mentése kilépéskor"
 
-msgid "save playlist on exit"
-msgstr "lejátszási lista mentése kilépéskor"
+msgid "Save playlist on exit"
+msgstr "Lejátszási lista mentése kilépéskor"
 
 msgid "scan state"
 msgstr "keresési állapot"
@@ -11374,7 +11374,7 @@ msgstr "alternatívák megjelenítése"
 msgid "show event details"
 msgstr "részletes adatok megjelenítése"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Médialejátszó megjelenítése a főmenüben"
 
 msgid "show softwaremanager in setup menu"
@@ -11453,8 +11453,8 @@ msgstr "szociális/politikai/gazdasági (általános)"
 msgid "social/spiritual science"
 msgstr "szociális/spirituális"
 
-msgid "sorting of playlists"
-msgstr "lejátszási listák rendezése"
+msgid "Sorting of playlists"
+msgstr "Lejátszási listák rendezése"
 
 msgid "special events"
 msgstr "különleges események"
@@ -11474,8 +11474,8 @@ msgstr "hagyományos"
 msgid "start cut here"
 msgstr "vágás belépő pontja"
 
-msgid "start directory"
-msgstr "kiindulási mappa"
+msgid "Start directory"
+msgstr "Kiindulási mappa"
 
 msgid "starts in a few seconds"
 msgstr "azonnal kezdődik"
