--- a/po/id.po
+++ b/po/id.po
@@ -11532,8 +11532,8 @@ msgstr "hapus penanda ini"
 msgid "rename entry"
 msgstr "ubah nama entri"
 
-msgid "repeat playlist"
-msgstr "ulang daftar putar"
+msgid "Repeat playlist"
+msgstr "Ulang daftar putar"
 
 msgid "repeated"
 msgstr "diulang"
@@ -11569,11 +11569,11 @@ msgstr "romansa"
 msgid "running"
 msgstr "Peringatan"
 
-msgid "save last directory on exit"
-msgstr "simpan direktori terakhir saat keluar"
+msgid "Save last directory on exit"
+msgstr "Simpan direktori terakhir saat keluar"
 
-msgid "save playlist on exit"
-msgstr "simpan dafarputar saat keluar"
+msgid "Save playlist on exit"
+msgstr "Simpan dafarputar saat keluar"
 
 msgid "scan state"
 msgstr "keadaan pemindaian"
@@ -11621,8 +11621,8 @@ msgstr "tampilkan alternatif"
 msgid "show event details"
 msgstr "tampilkan rincian acara"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "tampilkan pemutarmedia pada menu utama"
+msgid "Show media player on main menu"
+msgstr "Tampilkan pemutar media pada menu utama"
 
 msgid "show softwaremanager in setup menu"
 msgstr "tampilkan pengelola perangkat luna pada menu pengaturan"
@@ -11700,8 +11700,8 @@ msgstr "social/political issues/economics (general)"
 msgid "social/spiritual science"
 msgstr "social/spiritual science"
 
-msgid "sorting of playlists"
-msgstr "memilah daftarputar"
+msgid "Sorting of playlists"
+msgstr "Memilah daftarputar"
 
 msgid "special events"
 msgstr "acara khusus"
@@ -11721,8 +11721,8 @@ msgstr "standar"
 msgid "start cut here"
 msgstr "mulai potong di sini"
 
-msgid "start directory"
-msgstr "direktori mulai"
+msgid "Start directory"
+msgstr "Direktori mulai"
 
 #, fuzzy
 msgid "starts in a few seconds"
