--- a/po/is.po
+++ b/po/is.po
@@ -12813,8 +12813,8 @@ msgid "rename entry"
 msgstr ""
 
 #
-msgid "repeat playlist"
-msgstr "endurtaka spilunarlista"
+msgid "Repeat playlist"
+msgstr "Endurtaka spilunarlista"
 
 #
 msgid "repeated"
@@ -12853,12 +12853,12 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
-msgstr "vista síðustu möppu þegar hætt er"
+msgid "Save last directory on exit"
+msgstr "Vista síðustu möppu þegar hætt er"
 
 #
-msgid "save playlist on exit"
-msgstr "vista spilunarlista þegar hætt er"
+msgid "Save playlist on exit"
+msgstr "Vista spilunarlista þegar hætt er"
 
 #
 msgid "scan state"
@@ -12914,7 +12914,7 @@ msgstr "súna valkosti"
 msgid "show event details"
 msgstr "sýna atriði nánar"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -12997,7 +12997,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -13020,8 +13020,8 @@ msgid "start cut here"
 msgstr "byrja klippingu hér"
 
 #
-msgid "start directory"
-msgstr "byrjunar mappa"
+msgid "Start directory"
+msgstr "Byrjunar mappa"
 
 msgid "starts in a few seconds"
 msgstr ""
