--- a/po/it.po
+++ b/po/it.po
@@ -11412,7 +11412,7 @@ msgstr "Eliminare questo marcatore"
 msgid "rename entry"
 msgstr "Rinominare la voce selezionata"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Ripetere la playlist"
 
 msgid "repeated"
@@ -11448,10 +11448,10 @@ msgstr "Romanzo rosa"
 msgid "running"
 msgstr "In esecuzione"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Ricordare l'ultima cartella al momento di uscire"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Ricordare la playlist al momento di uscire"
 
 msgid "scan state"
@@ -11499,7 +11499,7 @@ msgstr "Mostrare le alternative"
 msgid "show event details"
 msgstr "Mostrare i dettagli dell'evento"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Mostrare il 'Lettore multimediale' nel menu principale"
 
 msgid "show softwaremanager in setup menu"
@@ -11578,7 +11578,7 @@ msgstr "Sociale/Politica/Economia (generale)"
 msgid "social/spiritual science"
 msgstr "Sociale/Spiritualità"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Ordinamento delle playlist"
 
 msgid "special events"
@@ -11599,7 +11599,7 @@ msgstr "Predefinito"
 msgid "start cut here"
 msgstr "Iniziare il taglio qui"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Cartella di avvio"
 
 msgid "starts in a few seconds"
