--- a/po/lt.po
+++ b/po/lt.po
@@ -11334,8 +11334,8 @@ msgstr "pašalinti šią žymę"
 msgid "rename entry"
 msgstr "pervadinti"
 
-msgid "repeat playlist"
-msgstr "pakartoti grojaraštį"
+msgid "Repeat playlist"
+msgstr "Pakartoti grojaraštį"
 
 msgid "repeated"
 msgstr "pakartotinis"
@@ -11370,11 +11370,11 @@ msgstr "romansai"
 msgid "running"
 msgstr "veikia"
 
-msgid "save last directory on exit"
-msgstr "užveriant išsaugoti paskutinį katalogą"
+msgid "Save last directory on exit"
+msgstr "Užveriant išsaugoti paskutinį katalogą"
 
-msgid "save playlist on exit"
-msgstr "užveriant išsaugoti grojaraštį"
+msgid "Save playlist on exit"
+msgstr "Užveriant išsaugoti grojaraštį"
 
 msgid "scan state"
 msgstr "paieškos eiga"
@@ -11421,8 +11421,8 @@ msgstr "rodyti alternatyvas"
 msgid "show event details"
 msgstr "rodyti įvykio detales"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "media grotuvą rodyti pagrindiniame meniu"
+msgid "Show media player on main menu"
+msgstr "Media grotuvą rodyti pagrindiniame meniu"
 
 msgid "show softwaremanager in setup menu"
 msgstr "programinės įrangos tvarkyklę rodyti tarp nustatymų meniu"
@@ -11500,8 +11500,8 @@ msgstr "socialiniai/politiniai klausimai/ekonomika (bendra)"
 msgid "social/spiritual science"
 msgstr "socialinis/dvasinis mokslas"
 
-msgid "sorting of playlists"
-msgstr "grojaraščių rūšiavimas"
+msgid "Sorting of playlists"
+msgstr "Grojaraščių rūšiavimas"
 
 msgid "special events"
 msgstr "specialieji įvykiai"
@@ -11521,8 +11521,8 @@ msgstr "standartinis"
 msgid "start cut here"
 msgstr "iškirpimo pradžia"
 
-msgid "start directory"
-msgstr "pradinis katalogas"
+msgid "Start directory"
+msgstr "Pradinis katalogas"
 
 msgid "starts in a few seconds"
 msgstr "prasidės po kelių sekundžių"
