--- a/po/lv.po
+++ b/po/lv.po
@@ -11316,8 +11316,8 @@ msgstr "dzēst iezīmi"
 msgid "rename entry"
 msgstr "pārsaukt ierakstu"
 
-msgid "repeat playlist"
-msgstr "atkārtot repertuāru"
+msgid "Repeat playlist"
+msgstr "Atkārtot repertuāru"
 
 msgid "repeated"
 msgstr "atkārtots"
@@ -11352,11 +11352,11 @@ msgstr "romance"
 msgid "running"
 msgstr "notiek"
 
-msgid "save last directory on exit"
-msgstr "izejot, saglabāt pēdējo mapi"
+msgid "Save last directory on exit"
+msgstr "Izejot, saglabāt pēdējo mapi"
 
-msgid "save playlist on exit"
-msgstr "izejot, saglabāt repertuāru"
+msgid "Save playlist on exit"
+msgstr "Izejot, saglabāt repertuāru"
 
 msgid "scan state"
 msgstr "meklēšanas statuss"
@@ -11403,8 +11403,8 @@ msgstr "rādīt alternatīvas"
 msgid "show event details"
 msgstr "rādīt notikuma papildus informāciju"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "parādīt mediju atskaņotāju pamata izvēlnē"
+msgid "Show media player on main menu"
+msgstr "Parādīt mediju atskaņotāju pamata izvēlnē"
 
 msgid "show softwaremanager in setup menu"
 msgstr "parādīt programmatūras pārvaldnieku iestatījumu izvēlnē"
@@ -11482,8 +11482,8 @@ msgstr "sociālie/politiskie jautājumi/ekonomika (vispārīgi)"
 msgid "social/spiritual science"
 msgstr "sociālie/garīgā zinātne"
 
-msgid "sorting of playlists"
-msgstr "kārtot atskaņošanas sarakstu"
+msgid "Sorting of playlists"
+msgstr "Kārtot atskaņošanas sarakstu"
 
 msgid "special events"
 msgstr "speciālie notikumi"
@@ -11503,8 +11503,8 @@ msgstr "standarta"
 msgid "start cut here"
 msgstr "sākt griešanu šeit"
 
-msgid "start directory"
-msgstr "sākuma mape"
+msgid "Start directory"
+msgstr "Sākuma mape"
 
 msgid "starts in a few seconds"
 msgstr "tūlīt sāksies"
