--- a/po/nb.po
+++ b/po/nb.po
@@ -12566,8 +12566,8 @@ msgid "rename entry"
 msgstr "endre kanalnavn"
 
 #
-msgid "repeat playlist"
-msgstr "gjenta opptaksliste"
+msgid "Repeat playlist"
+msgstr "Gjenta opptaksliste"
 
 #
 msgid "repeated"
@@ -12605,11 +12605,11 @@ msgstr "romantikk"
 msgid "running"
 msgstr "kjører"
 
-msgid "save last directory on exit"
-msgstr "lagre siste mappe ved avslutning"
+msgid "Save last directory on exit"
+msgstr "Lagre siste mappe ved avslutning"
 
-msgid "save playlist on exit"
-msgstr "lagre opptaksliste ved avslutning"
+msgid "Save playlist on exit"
+msgstr "Lagre opptaksliste ved avslutning"
 
 msgid "scan state"
 msgstr "søkestatus"
@@ -12663,8 +12663,8 @@ msgstr "vis alternativer"
 msgid "show event details"
 msgstr "vis hendelsesdetaljene"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "vis mediespiller på hovedmeny"
+msgid "Show media player on main menu"
+msgstr "Vis mediespiller på hovedmeny"
 
 msgid "show softwaremanager in setup menu"
 msgstr "vis programvareoppsett"
@@ -12746,8 +12746,8 @@ msgstr "sosialt/politiske spørsmål/økonomi (generelt)"
 msgid "social/spiritual science"
 msgstr "sosialt/åndsvitenskap"
 
-msgid "sorting of playlists"
-msgstr "sorter opptakslister"
+msgid "Sorting of playlists"
+msgstr "Sorter opptakslister"
 
 msgid "special events"
 msgstr "spesial program"
@@ -12769,8 +12769,8 @@ msgstr "standard"
 msgid "start cut here"
 msgstr "start klipp her"
 
-msgid "start directory"
-msgstr "startmappe"
+msgid "Start directory"
+msgstr "Startmappe"
 
 msgid "starts in a few seconds"
 msgstr "starter innen få sekunder"
