--- a/po/nl.po
+++ b/po/nl.po
@@ -11599,7 +11599,7 @@ msgstr "verwijder deze markering"
 msgid "rename entry"
 msgstr "Wijzig de naam van het huidige item"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Herhaal afspeellijst"
 
 msgid "repeated"
@@ -11635,10 +11635,10 @@ msgstr "Romantiek"
 msgid "running"
 msgstr "actief"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Bewaar laatste map bij het beëindigen"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Bewaar afspeellijst bij het beëindigen"
 
 msgid "scan state"
@@ -11687,8 +11687,8 @@ msgstr "Alternatieven weergeven"
 msgid "show event details"
 msgstr "EPG details weergeven"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "mediaplayer op hoofdmenu tonen"
+msgid "Show media player on main menu"
+msgstr "Mediaplayer op hoofdmenu tonen"
 
 msgid "show softwaremanager in setup menu"
 msgstr "Softwaremanager zichtbaar in setup menu"
@@ -11766,8 +11766,8 @@ msgstr "Sociaal/Politiek/Economisch (Algemeen)"
 msgid "social/spiritual science"
 msgstr "Sociale/Geestelijke wetenschap"
 
-msgid "sorting of playlists"
-msgstr "sorteren van afspeellijsten"
+msgid "Sorting of playlists"
+msgstr "Sorteren van afspeellijsten"
 
 msgid "special events"
 msgstr "speciale gebeurtenissen"
@@ -11787,7 +11787,7 @@ msgstr "Standaard"
 msgid "start cut here"
 msgstr "Start knippen hier"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Start map"
 
 msgid "starts in a few seconds"
