--- a/po/nn.po
+++ b/po/nn.po
@@ -12474,8 +12474,8 @@ msgid "rename entry"
 msgstr "endre navn i oppføringen"
 
 #
-msgid "repeat playlist"
-msgstr "gjenta spilliste"
+msgid "Repeat playlist"
+msgstr "Gjenta spilliste"
 
 #
 msgid "repeated"
@@ -12514,11 +12514,11 @@ msgstr "romantikk"
 msgid "running"
 msgstr "hagearbeid"
 
-msgid "save last directory on exit"
-msgstr "lagre siste katalog ved avslutning"
+msgid "Save last directory on exit"
+msgstr "Lagre siste katalog ved avslutning"
 
-msgid "save playlist on exit"
-msgstr "lagre spilliste ved avslutning"
+msgid "Save playlist on exit"
+msgstr "Lagre spilliste ved avslutning"
 
 msgid "scan state"
 msgstr "søkestatus"
@@ -12573,8 +12573,8 @@ msgstr "vis alternativer"
 msgid "show event details"
 msgstr "vis programdetaljer"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "vis mediespiller på hovedmeny"
+msgid "Show media player on main menu"
+msgstr "Vis mediespiller på hovedmeny"
 
 msgid "show softwaremanager in setup menu"
 msgstr "vis programvareoppsett"
@@ -12656,8 +12656,8 @@ msgstr "sosial/politiske spørsmål/økonomi (generelt)"
 msgid "social/spiritual science"
 msgstr "sosial/åndsvitenskap"
 
-msgid "sorting of playlists"
-msgstr "sortering av spillister"
+msgid "Sorting of playlists"
+msgstr "Sortering av spillister"
 
 msgid "special events"
 msgstr "spesial program"
@@ -12679,8 +12679,8 @@ msgstr "standard"
 msgid "start cut here"
 msgstr "start klipp her"
 
-msgid "start directory"
-msgstr "start katalog"
+msgid "Start directory"
+msgstr "Start katalog"
 
 #, fuzzy
 msgid "starts in a few seconds"
