--- a/po/pl.po
+++ b/po/pl.po
@@ -11306,7 +11306,7 @@ msgstr "Usuń ten znacznik"
 msgid "rename entry"
 msgstr "Zmień nazwę"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Powtórz playlistę"
 
 msgid "repeated"
@@ -11342,10 +11342,10 @@ msgstr "Romans"
 msgid "running"
 msgstr "uruchomiony"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Zapisz ostatni katalog przy wyjściu"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Zapisz playlistę przy wyjściu"
 
 msgid "scan state"
@@ -11393,7 +11393,7 @@ msgstr "Pokaż alternatywne kanały"
 msgid "show event details"
 msgstr "Pokaż szczegóły wydarzenia"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Pokaż Mediaplayer w menu głównym"
 
 msgid "show softwaremanager in setup menu"
@@ -11472,7 +11472,7 @@ msgstr "Poltyka/Społeczeństwo/Ekonomia"
 msgid "social/spiritual science"
 msgstr "Nauki społeczne"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Sortowanie listy odtwarzania"
 
 msgid "special events"
@@ -11493,7 +11493,7 @@ msgstr "Standardowe"
 msgid "start cut here"
 msgstr "Rozpocznij cięcie tutaj"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Katalog początkowy"
 
 msgid "starts in a few seconds"
