--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11404,7 +11404,7 @@ msgstr "Remover esta marca"
 msgid "rename entry"
 msgstr "Renomear item"
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Repetir lista de reprodução"
 
 msgid "repeated"
@@ -11441,10 +11441,10 @@ msgstr "Romance"
 msgid "running"
 msgstr "Jardinagem"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Lembrar diretório ao sair"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Salvar lista de reprodução ao sair"
 
 msgid "scan state"
@@ -11493,7 +11493,7 @@ msgstr "Ver alternativas"
 msgid "show event details"
 msgstr "Exibir detalhes do evento"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Exibir reprodutor de mídia no menu principal"
 
 msgid "show softwaremanager in setup menu"
@@ -11572,7 +11572,7 @@ msgstr "Questões sociais/Políticas/Economia (geral)"
 msgid "social/spiritual science"
 msgstr "Ciência social/espiritual"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Ordenar listas de reprodução"
 
 msgid "special events"
@@ -11593,7 +11593,7 @@ msgstr "Padrão"
 msgid "start cut here"
 msgstr "Iniciar corte aqui"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Diretório inicial"
 
 #, fuzzy
