--- a/po/ro.po
+++ b/po/ro.po
@@ -11578,8 +11578,8 @@ msgstr "elimina aceasta marcare"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
-msgstr "repeta playlist"
+msgid "Repeat playlist"
+msgstr "Repeta playlist"
 
 msgid "repeated"
 msgstr "repetat"
@@ -11614,11 +11614,11 @@ msgstr ""
 msgid "running"
 msgstr ""
 
-msgid "save last directory on exit"
-msgstr "salveaza ultimul director la iesire"
+msgid "Save last directory on exit"
+msgstr "Salveaza ultimul director la iesire"
 
-msgid "save playlist on exit"
-msgstr "salveaza playlist la iesire"
+msgid "Save playlist on exit"
+msgstr "Salveaza playlist la iesire"
 
 msgid "scan state"
 msgstr "starea scanarii"
@@ -11666,7 +11666,7 @@ msgstr "arata alternative"
 msgid "show event details"
 msgstr "arata detaliile evenimentului"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -11745,7 +11745,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -11766,8 +11766,8 @@ msgstr "standard"
 msgid "start cut here"
 msgstr "incepe decupare aici"
 
-msgid "start directory"
-msgstr "start director"
+msgid "Start directory"
+msgstr "Start director"
 
 msgid "starts in a few seconds"
 msgstr ""
