--- a/po/sk.po
+++ b/po/sk.po
@@ -11315,8 +11315,8 @@ msgstr "odstrániť túto značku"
 msgid "rename entry"
 msgstr "premenovať položku"
 
-msgid "repeat playlist"
-msgstr "zopakovať zoznam prehrávok"
+msgid "Repeat playlist"
+msgstr "Zopakovať zoznam prehrávok"
 
 msgid "repeated"
 msgstr "opakované"
@@ -11351,11 +11351,11 @@ msgstr "romantika"
 msgid "running"
 msgstr "Prebieha"
 
-msgid "save last directory on exit"
-msgstr "pri ukončení uložiť posledný adresár"
+msgid "Save last directory on exit"
+msgstr "Pri ukončení uložiť posledný adresár"
 
-msgid "save playlist on exit"
-msgstr "pri ukončení uložiť zoznam prehrávok"
+msgid "Save playlist on exit"
+msgstr "Pri ukončení uložiť zoznam prehrávok"
 
 msgid "scan state"
 msgstr "stav vyhľadávania"
@@ -11402,8 +11402,8 @@ msgstr "zobraziť alternatívy"
 msgid "show event details"
 msgstr "zobraziť detaily o programe"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "zobrazovať prehrávač médií v hlavnom menu"
+msgid "Show media player on main menu"
+msgstr "Zobrazovať prehrávač médií v hlavnom menu"
 
 msgid "show softwaremanager in setup menu"
 msgstr "zobraziť manažér softvéru v menu nastavení"
@@ -11481,8 +11481,8 @@ msgstr "sociálne/politické problémy/ekonómia (všeobecne)"
 msgid "social/spiritual science"
 msgstr "sociálne/duchovnej vedy"
 
-msgid "sorting of playlists"
-msgstr "usporiadanie playlistov"
+msgid "Sorting of playlists"
+msgstr "Usporiadanie playlistov"
 
 msgid "special events"
 msgstr "špeciálne podujatia"
@@ -11502,8 +11502,8 @@ msgstr "štandardné"
 msgid "start cut here"
 msgstr "začiatok strihu tu"
 
-msgid "start directory"
-msgstr "počiatočný adresár"
+msgid "Start directory"
+msgstr "Počiatočný adresár"
 
 msgid "starts in a few seconds"
 msgstr "začne o pár sekúnd"
