--- a/po/sl.po
+++ b/po/sl.po
@@ -13087,8 +13087,8 @@ msgid "rename entry"
 msgstr "Preimenovanje vnosa"
 
 #
-msgid "repeat playlist"
-msgstr "ponovitev seznama predvjanja"
+msgid "Repeat playlist"
+msgstr "Ponovitev seznama predvjanja"
 
 #
 msgid "repeated"
@@ -13127,12 +13127,12 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
-msgstr "ob izhodu se naj shrani zadnja mapa"
+msgid "Save last directory on exit"
+msgstr "Ob izhodu se naj shrani zadnja mapa"
 
 #
-msgid "save playlist on exit"
-msgstr "ob izhodu se naj shrani seznam predvajanja"
+msgid "Save playlist on exit"
+msgstr "Ob izhodu se naj shrani seznam predvajanja"
 
 #
 msgid "scan state"
@@ -13190,8 +13190,8 @@ msgstr "Prikaz alternativ"
 msgid "show event details"
 msgstr "Prikaz informacij o dogodku"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "prikaz multimedijskega predvajalnika v osnovnem meniju"
+msgid "Show media player on main menu"
+msgstr "Prikaz multimedijskega predvajalnika v osnovnem meniju"
 
 msgid "show softwaremanager in setup menu"
 msgstr "Prikaz softwaremanager vtičnika v nastavitvenem meniju"
@@ -13274,8 +13274,8 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
-msgstr "razvrščanje seznamov"
+msgid "Sorting of playlists"
+msgstr "Razvrščanje seznamov"
 
 msgid "special events"
 msgstr "posebni dogodki"
@@ -13298,8 +13298,8 @@ msgid "start cut here"
 msgstr "pričetek rezanja tukaj"
 
 #
-msgid "start directory"
-msgstr "začetna mapa"
+msgid "Start directory"
+msgstr "Začetna mapa"
 
 #, fuzzy
 msgid "starts in a few seconds"
