--- a/po/sr.po
+++ b/po/sr.po
@@ -13158,7 +13158,7 @@ msgid "rename entry"
 msgstr ""
 
 #
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Ponovite listu za reprodukciju"
 
 #
@@ -13198,11 +13198,11 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Sačuvajte poslednji direktorijum kod izlaska"
 
 #
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Sačuvajte listu za reprodukciju kod izlaska "
 
 #
@@ -13260,7 +13260,7 @@ msgstr "prikaži alternative"
 msgid "show event details"
 msgstr "prikaži proširene infor. "
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -13343,7 +13343,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -13367,7 +13367,7 @@ msgid "start cut here"
 msgstr "počni rez ovde"
 
 #
-msgid "start directory"
+msgid "Start directory"
 msgstr "Početni direktorijum"
 
 msgid "starts in a few seconds"
