--- a/po/sv.po
+++ b/po/sv.po
@@ -12894,8 +12894,8 @@ msgid "rename entry"
 msgstr "döp om kanal"
 
 #
-msgid "repeat playlist"
-msgstr "upprepa spellista"
+msgid "Repeat playlist"
+msgstr "Upprepa spellista"
 
 #
 msgid "repeated"
@@ -12935,12 +12935,12 @@ msgid "running"
 msgstr "Varning"
 
 #
-msgid "save last directory on exit"
-msgstr "spara sista biblioteket vid avslut"
+msgid "Save last directory on exit"
+msgstr "Spara sista biblioteket vid avslut"
 
 #
-msgid "save playlist on exit"
-msgstr "spara spellista vid avslut"
+msgid "Save playlist on exit"
+msgstr "Spara spellista vid avslut"
 
 #
 msgid "scan state"
@@ -12996,8 +12996,8 @@ msgstr "visa alternativ"
 msgid "show event details"
 msgstr "visa programdetaljer"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "visa mediaspelaren i huvudmenyn"
+msgid "Show media player on main menu"
+msgstr "Visa mediaspelaren i huvudmenyn"
 
 msgid "show softwaremanager in setup menu"
 msgstr "visar mjukvaruhanterare i inställningsmeny"
@@ -13080,8 +13080,8 @@ msgstr "sociala / politiska frågor / ekonomi (allmänt)"
 msgid "social/spiritual science"
 msgstr "social / andlig vetenskap"
 
-msgid "sorting of playlists"
-msgstr "sortering av spellistor"
+msgid "Sorting of playlists"
+msgstr "Sortering av spellistor"
 
 msgid "special events"
 msgstr "speciella evenemang"
@@ -13104,8 +13104,8 @@ msgid "start cut here"
 msgstr "startklipp här"
 
 #
-msgid "start directory"
-msgstr "startbibliotek"
+msgid "Start directory"
+msgstr "Startbibliotek"
 
 #, fuzzy
 msgid "starts in a few seconds"
