--- a/po/th.po
+++ b/po/th.po
@@ -11633,7 +11633,7 @@ msgstr "ลบรายการนี้ออก"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "กลับไปที่สารบัญ"
 
 msgid "repeated"
@@ -11669,10 +11669,10 @@ msgstr ""
 msgid "running"
 msgstr ""
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "บันทึกโฟล์เดอร์ปัจจุบันเมื่อออก"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "บันทึกสารบัญเมื่อออก"
 
 msgid "scan state"
@@ -11721,7 +11721,7 @@ msgstr "แสดงทางเลือกอื่น"
 msgid "show event details"
 msgstr "แสดงรายละเอียดรายการ"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -11800,7 +11800,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -11821,7 +11821,7 @@ msgstr "มาตรฐาน"
 msgid "start cut here"
 msgstr "ตัดตรงนี้"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "โฟล์เดอร์เริ่มต้น"
 
 msgid "starts in a few seconds"
