--- a/po/tr.po
+++ b/po/tr.po
@@ -11459,7 +11459,7 @@ msgstr "Sil"
 msgid "rename entry"
 msgstr "Ad değiştir "
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Oynatma Listesini Tekrarla"
 
 msgid "repeated"
@@ -11496,10 +11496,10 @@ msgstr "Romantik"
 msgid "running"
 msgstr "Uyarı"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Çıkışta, son klasörü kaydet"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Çıkışta, oynatma listesini kaydet"
 
 msgid "scan state"
@@ -11548,7 +11548,7 @@ msgstr "Alternatifleri göster"
 msgid "show event details"
 msgstr "EPG detaylarını göster"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Ana menüde Media Player'ı gösterir"
 
 msgid "show softwaremanager in setup menu"
@@ -11627,7 +11627,7 @@ msgstr "Sosyal/Siyasi/Ekonomi (Genel)"
 msgid "social/spiritual science"
 msgstr "Sosyal/Ruhasal"
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "Çalma listelerini sırala"
 
 msgid "special events"
@@ -11648,7 +11648,7 @@ msgstr "Standart"
 msgid "start cut here"
 msgstr "Buradan kes"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "Başlangıç klasörü"
 
 #, fuzzy
