--- a/po/uk.po
+++ b/po/uk.po
@@ -11576,8 +11576,8 @@ msgstr "видалити мітку"
 msgid "rename entry"
 msgstr "перейменувати обране"
 
-msgid "repeat playlist"
-msgstr "повторити плейлист"
+msgid "Repeat playlist"
+msgstr "Повторити плейлист"
 
 msgid "repeated"
 msgstr "повторний"
@@ -11613,11 +11613,11 @@ msgstr "романс"
 msgid "running"
 msgstr "Увага"
 
-msgid "save last directory on exit"
-msgstr "зберегти останній каталог при виході"
+msgid "Save last directory on exit"
+msgstr "Зберегти останній каталог при виході"
 
-msgid "save playlist on exit"
-msgstr "зберегти плейлист при виході"
+msgid "Save playlist on exit"
+msgstr "Зберегти плейлист при виході"
 
 msgid "scan state"
 msgstr "стан пошуку"
@@ -11665,8 +11665,8 @@ msgstr "показати альтернативу"
 msgid "show event details"
 msgstr "показати деталі події"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "показати програвач у головному меню"
+msgid "Show media player on main menu"
+msgstr "Показати програвач у головному меню"
 
 msgid "show softwaremanager in setup menu"
 msgstr "показати менеджер софта в меню налаштувань"
@@ -11744,8 +11744,8 @@ msgstr "соціальні/політичні питання/Економіка 
 msgid "social/spiritual science"
 msgstr "соціальна/духовна наука"
 
-msgid "sorting of playlists"
-msgstr "сортування плейлистів"
+msgid "Sorting of playlists"
+msgstr "Сортування плейлистів"
 
 msgid "special events"
 msgstr "спеціальна подія"
@@ -11765,8 +11765,8 @@ msgstr "стандарт"
 msgid "start cut here"
 msgstr "початок редагування"
 
-msgid "start directory"
-msgstr "початковий каталог"
+msgid "Start directory"
+msgstr "Початковий каталог"
 
 #, fuzzy
 msgid "starts in a few seconds"
