--- a/po/vi.po
+++ b/po/vi.po
@@ -11283,8 +11283,8 @@ msgstr "xóa dấu này"
 msgid "rename entry"
 msgstr "đổi tên mục nhập"
 
-msgid "repeat playlist"
-msgstr "phát lại danh sách"
+msgid "Repeat playlist"
+msgstr "Phát lại danh sách"
 
 msgid "repeated"
 msgstr "lặp đi lặp lại"
@@ -11319,11 +11319,11 @@ msgstr "lãng mạn"
 msgid "running"
 msgstr "đang chạy"
 
-msgid "save last directory on exit"
-msgstr "lưu thư mục cuối cùng khi thoát"
+msgid "Save last directory on exit"
+msgstr "Lưu thư mục cuối cùng khi thoát"
 
-msgid "save playlist on exit"
-msgstr "lưu danh sách phát khi thoát"
+msgid "Save playlist on exit"
+msgstr "Lưu danh sách phát khi thoát"
 
 msgid "scan state"
 msgstr "trạng thái quét"
@@ -11370,8 +11370,8 @@ msgstr "hiển thị thay thế"
 msgid "show event details"
 msgstr "hiển thị chi tiết sự kiện"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "hiển thị trình phát đa phương tiện trên menu chính"
+msgid "Show media player on main menu"
+msgstr "Hiển thị trình phát đa phương tiện trên menu chính"
 
 msgid "show softwaremanager in setup menu"
 msgstr "hiển thị softwaremanager trong menu cài đặt"
@@ -11449,8 +11449,8 @@ msgstr "các vấn đề xã hội / chính trị / kinh tế (nói chung)"
 msgid "social/spiritual science"
 msgstr "khoa học xã hội / tâm linh"
 
-msgid "sorting of playlists"
-msgstr "sắp xếp danh sách phát"
+msgid "Sorting of playlists"
+msgstr "Sắp xếp danh sách phát"
 
 msgid "special events"
 msgstr "sự kiện đặc biệt"
@@ -11470,8 +11470,8 @@ msgstr "tiêu chuẩn"
 msgid "start cut here"
 msgstr "bắt đầu cắt ở đây"
 
-msgid "start directory"
-msgstr "bắt đầu thư mục"
+msgid "Start directory"
+msgstr "Bắt đầu thư mục"
 
 msgid "starts in a few seconds"
 msgstr "bắt đầu trong vài giây"
