--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -11274,7 +11274,7 @@ msgstr "移除这个标记"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "重复播放列表"
 
 msgid "repeated"
@@ -11311,10 +11311,10 @@ msgstr ""
 msgid "running"
 msgstr "正在运行"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "退出时保存目录"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "退出时保存播放列表"
 
 msgid "scan state"
@@ -11363,7 +11363,7 @@ msgstr "显示选项"
 msgid "show event details"
 msgstr "显示事件详细内容"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -11442,7 +11442,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr "播放列表排序"
 
 msgid "special events"
@@ -11463,7 +11463,7 @@ msgstr "标准"
 msgid "start cut here"
 msgstr "从这里开始剪接"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "开始目录"
 
 #, fuzzy
