--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -11278,7 +11278,7 @@ msgstr "移除這個標記"
 msgid "rename entry"
 msgstr ""
 
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "重複播放列表"
 
 msgid "repeated"
@@ -11315,10 +11315,10 @@ msgstr ""
 msgid "running"
 msgstr "正在運行"
 
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "退出時保存目錄"
 
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "退出時保存播放列表"
 
 msgid "scan state"
@@ -11367,7 +11367,7 @@ msgstr "顯示選項"
 msgid "show event details"
 msgstr "顯示事件詳細內容"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr ""
 
 msgid "show softwaremanager in setup menu"
@@ -11446,7 +11446,7 @@ msgstr ""
 msgid "social/spiritual science"
 msgstr ""
 
-msgid "sorting of playlists"
+msgid "Sorting of playlists"
 msgstr ""
 
 msgid "special events"
@@ -11467,7 +11467,7 @@ msgstr "標準"
 msgid "start cut here"
 msgstr "從這裏開始剪輯"
 
-msgid "start directory"
+msgid "Start directory"
 msgstr "開始目錄"
 
 #, fuzzy
