--- a/po/fi.po
+++ b/po/fi.po
@@ -12651,7 +12651,7 @@ msgid "rename entry"
 msgstr "Uudelleennimeä valittu"
 
 #
-msgid "repeat playlist"
+msgid "Repeat playlist"
 msgstr "Toista soittolista"
 
 #
@@ -12691,11 +12691,11 @@ msgid "running"
 msgstr ""
 
 #
-msgid "save last directory on exit"
+msgid "Save last directory on exit"
 msgstr "Tallenna viimeisin hakemisto suljettaessa"
 
 #
-msgid "save playlist on exit"
+msgid "Save playlist on exit"
 msgstr "Tallenna soittolista suljettaessa"
 
 #
@@ -12753,7 +12753,7 @@ msgstr "Näytä vaihtoehtoiset kanavat"
 msgid "show event details"
 msgstr "Näytä ohjelman tarkemmat tiedot"
 
-msgid "show mediaplayer on mainmenu"
+msgid "Show media player on main menu"
 msgstr "Näytä mediatoistin päävalikossa"
 
 msgid "show softwaremanager in setup menu"
@@ -12837,8 +12837,8 @@ msgstr "sosiaaliset/poliittiset aiheet/talous (yleinen)"
 msgid "social/spiritual science"
 msgstr "sosiaalinen/hengellinen tiede"
 
-msgid "sorting of playlists"
-msgstr "soittolistojen järjestys"
+msgid "Sorting of playlists"
+msgstr "Soittolistojen järjestys"
 
 msgid "special events"
 msgstr "erikoistapahtuma"
@@ -12861,7 +12861,7 @@ msgid "start cut here"
 msgstr "Aloita leikkaus tästä"
 
 #
-msgid "start directory"
+msgid "Start directory"
 msgstr "Aloitushakemisto"
 
 #, fuzzy
