--- a/po/pt.po
+++ b/po/pt.po
@@ -13157,8 +13157,8 @@ msgid "rename entry"
 msgstr "renomear entrada"
 
 #
-msgid "repeat playlist"
-msgstr "repetir Lista de Reprodução"
+msgid "Repeat playlist"
+msgstr "Repetir Lista de Reprodução"
 
 #
 msgid "repeated"
@@ -13198,12 +13198,12 @@ msgid "running"
 msgstr "jardinagem"
 
 #
-msgid "save last directory on exit"
-msgstr "memorizar último directório ao sair"
+msgid "Save last directory on exit"
+msgstr "Memorizar último directório ao sair"
 
 #
-msgid "save playlist on exit"
-msgstr "memorizar Lista de Reprodução ao sair"
+msgid "Save playlist on exit"
+msgstr "Memorizar Lista de Reprodução ao sair"
 
 #
 msgid "scan state"
@@ -13260,8 +13260,8 @@ msgstr "ver alternativas"
 msgid "show event details"
 msgstr "mostrar detalhes do programa"
 
-msgid "show mediaplayer on mainmenu"
-msgstr "mostrar leitor multimédia no menu principal"
+msgid "Show media player on main menu"
+msgstr "Mostrar leitor multimédia no menu principal"
 
 msgid "show softwaremanager in setup menu"
 msgstr "mostrar Gestor de Software no menu de configurações"
@@ -13345,8 +13345,8 @@ msgstr "social/política/economia"
 msgid "social/spiritual science"
 msgstr "social/ciência espiritual"
 
-msgid "sorting of playlists"
-msgstr "ordenação de listas de reprodução"
+msgid "Sorting of playlists"
+msgstr "Ordenação de listas de reprodução"
 
 msgid "special events"
 msgstr "programas especiais"
@@ -13369,8 +13369,8 @@ msgid "start cut here"
 msgstr "iniciar o corte aqui"
 
 #
-msgid "start directory"
-msgstr "directório inicial"
+msgid "Start directory"
+msgstr "Directório inicial"
 
 #, fuzzy
 msgid "starts in a few seconds"
